modified genericDml and mockDml to leverage DmlResultListWrappers

--- a/src/classes/F45_GenericDmlMock.cls
+++ b/src/classes/F45_GenericDmlMock.cls
@@ -22,53 +22,52 @@ public class F45_GenericDmlMock extends F45_GenericDml {
 	public List<List<SObject>> undeletedSObjectListList = new List<List<SObject>>();
 	public List<Boolean> undeleteWasAllOrNoneList = new List<Boolean>();
 	
-    public override List<Database.SaveResult> doInsert(List<SObject> objectList, Boolean isAllOrNone) {
+	public List<F45_DmlResultListWrapperInterface> dmlResultListWrapperList;
+	
+    public override F45_SaveResultListWrapper doInsert(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.insertedSObjectListList.add(objectList);
     	}
    		this.insertWasAllOrNoneList.add(isAllOrNone);
-   		
-   		// Unfortunately, I can't find information how to construct a SaveResult, so we can't mock the return. :-(
-   		return new List<Database.SaveResult>();
+   		return (F45_SaveResultListWrapper) this.getNextResultList();
     }
 
-    public override List<Database.SaveResult> doUpdate(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_SaveResultListWrapper doUpdate(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.updatedSObjectListList.add(objectList);
     	}
    		this.updateWasAllOrNoneList.add(isAllOrNone);
-   		
-   		// Unfortunately, I can't find information how to construct a SaveResult, so we can't mock the return. :-(
-   		return new List<Database.SaveResult>();
+   		return (F45_SaveResultListWrapper) this.getNextResultList();
     }
     
-    public override List<Database.UpsertResult> doUpsert(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_UpsertResultListWrapper doUpsert(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.upsertedSObjectListList.add(objectList);
     	}
    		this.upsertWasAllOrNoneList.add(isAllOrNone);
-   		
-   		// Unfortunately, I can't find information how to construct a UpsertResult, so we can't mock the return. :-(
-   		return new List<Database.UpsertResult>();
+   		return (F45_UpsertResultListWrapper) this.getNextResultList();
     }
     
-    public override List<Database.DeleteResult> doDelete(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_DeleteResultListWrapper doDelete(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.deletedSObjectListList.add(objectList);
     	}
    		this.deleteWasAllOrNoneList.add(isAllOrNone);
-   		
-   		// Unfortunately, I can't find information how to construct a DeleteResult, so we can't mock the return. :-(
-   		return new List<Database.DeleteResult>();
+   		return (F45_DeleteResultListWrapper) this.getNextResultList();
     }
     
-    public override List<Database.UndeleteResult> doUndelete(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_UndeleteResultListWrapper doUndelete(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.undeletedSObjectListList.add(objectList);
     	}
    		this.undeleteWasAllOrNoneList.add(isAllOrNone);
-   		
-   		// Unfortunately, I can't find information how to construct a UndeleteResult, so we can't mock the return. :-(
-   		return new List<Database.UndeleteResult>();
+   		return (F45_UndeleteResultListWrapper) this.getNextResultList();
+    }
+    
+    private Integer returnedResult = 0;
+    private F45_DmlResultListWrapperInterface getNextResultList() {
+    	F45_DmlResultListWrapperInterface listWrapper = dmlResultListWrapperList[returnedResult];
+    	returnedResult++;
+    	return listWrapper;
     }
 }
