--- a/samples/src/classes/SF45_ProductDmlIntTest.cls
+++ b/samples/src/classes/SF45_ProductDmlIntTest.cls
@@ -1,6 +1,6 @@
 @isTest 
 private class SF45_ProductDmlIntTest {
-	private static final User TestRunner = F45_RunAsUserFactory.create(); 
+	private static final User TestRunner = F45_FTY_RunAsUserFactory.create(); 
 	
 	@isTest static void testDoUpsertUsingSkuAsExternalKeyShouldUpdateProductByWarehouseSkuValue() {
 		// Arrange
@@ -8,7 +8,7 @@ private class SF45_ProductDmlIntTest {
 
 		String testWarehouseSku = 'CM01-R';
 		Product2 template = new Product2(warehouse_sku__c = testWarehouseSku, cost__c = 1999);
-		SF45_ProductFactory.create(template, F45_DummyInsertMode.REAL); 
+		SF45_ProductFactory.create(template, F45_FTY_DummyInsertMode.REAL); 
 
 		Product2 updatedProduct = new Product2(warehouse_sku__c = testWarehouseSku, cost__c = 3422); 
 		
