--- a/samples/src/classes/SF45_ProductSelectorIntTest.cls
+++ b/samples/src/classes/SF45_ProductSelectorIntTest.cls
@@ -1,13 +1,13 @@
 @isTest  
 private class SF45_ProductSelectorIntTest {
-	private static final User TestRunner = F45_RunAsUserFactory.create(); 
+	private static final User TestRunner = F45_FTY_RunAsUserFactory.create(); 
 	
 	@isTest static void testSelectById() {
 		// Arrange
 		SDAO_ProductSelector targetClass = new SDAO_ProductSelector(); 
 
 		Product2 template = new Product2(maintenance_cycle__c = 1999);
-		Product2 testProduct = SF45_ProductFactory.create(template, F45_DummyInsertMode.REAL);
+		Product2 testProduct = SF45_ProductFactory.create(template, F45_FTY_DummyInsertMode.REAL);
 		
 		// Act
 		List<Product2> resultList;
