--- a/samples/src/classes/SF45_WorkPartFactory.cls
+++ b/samples/src/classes/SF45_WorkPartFactory.cls
@@ -1,14 +1,14 @@
 @isTest 
-public class SF45_WorkPartFactory extends F45_SObjectFactory {
+public class SF45_WorkPartFactory extends F45_FTY_SObjectFactory {
 	private static Map<String, Object> defaultByKeyMap = new Map<String, Object>{
 	};  
 	
-	public static List<Work_Part__c> createList(Work_Part__c template, Integer quantity, F45_DummyInsertMode insertMode){
+	public static List<Work_Part__c> createList(Work_Part__c template, Integer quantity, F45_FTY_DummyInsertMode insertMode){
 		MockStrategyInterface strategy = new SessionInQuantityStrategy(template, quantity); 
-		return (List<Work_Part__c>) F45_SObjectFactory.createList(strategy, insertMode); 
+		return (List<Work_Part__c>) F45_FTY_SObjectFactory.createList(strategy, insertMode); 
 	}
 	
-	public static Work_Part__c create(Work_Part__c template, F45_DummyInsertMode insertMode){
+	public static Work_Part__c create(Work_Part__c template, F45_FTY_DummyInsertMode insertMode){
 		Integer quantity = 1;
 		return createList(template, quantity, insertMode)[0];
 	} 
@@ -20,10 +20,10 @@ public class SF45_WorkPartFactory extends F45_SObjectFactory {
 	} 
 	
 	public static List<Work_Part__c> createList(
-			Work_Part__c template, Integer quantity, List<Product2> equipmentList, F45_DummyInsertMode insertMode
+			Work_Part__c template, Integer quantity, List<Product2> equipmentList, F45_FTY_DummyInsertMode insertMode
 		){
 		MockStrategyInterface strategy = new nWorkPartPerEquipmentStrategy(template, quantity, equipmentList); 
-		List<Work_Part__c> workPartList = (List<Work_Part__c>) F45_SObjectFactory.createList(strategy, insertMode);
+		List<Work_Part__c> workPartList = (List<Work_Part__c>) F45_FTY_SObjectFactory.createList(strategy, insertMode);
 		Integer i = 0;
 		if (workPartList != null) {
 			for (Work_Part__c workPart : workPartList) {
@@ -33,7 +33,7 @@ public class SF45_WorkPartFactory extends F45_SObjectFactory {
 		return workPartList;
 	}	  
 
-	public static List<Work_Part__c> createList(Work_Part__c template, List<Product2> equipmentList, F45_DummyInsertMode insertMode){
+	public static List<Work_Part__c> createList(Work_Part__c template, List<Product2> equipmentList, F45_FTY_DummyInsertMode insertMode){
 		return createList(template, 1, equipmentList, insertMode); 
 	}
  
