--- a/samples/src/classes/F45_DML_GenericDmlMock.cls
+++ b/samples/src/classes/F45_DML_GenericDmlMock.cls
@@ -1,5 +1,5 @@
-@isTest 
-public class F45_GenericDmlMock extends F45_GenericDml {
+@isTest  
+public class F45_DML_GenericDmlMock extends F45_DML_GenericDml {
 	// These need to be lists in case there are multiple DML operations during your test.
 	// Otherwise, only the last operation would be verifiable.
 	public List<List<SObject>> insertedSObjectListList = new List<List<SObject>>();
@@ -17,50 +17,50 @@ public class F45_GenericDmlMock extends F45_GenericDml {
 	public List<List<SObject>> undeletedSObjectListList = new List<List<SObject>>();
 	public List<Boolean> undeleteWasAllOrNoneList = new List<Boolean>();
 	
-    public List<F45_DmlResultListWrapperInterface> dmlResultListWrapperList;
+    public List<F45_DML_GenericResultListWrapperIntf> dmlResultListWrapperList;
     private Integer returnedResult = 0;
 
-    public override F45_SaveResultListWrapper doInsert(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_DML_SaveResultListWrapper doInsert(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.insertedSObjectListList.add(objectList);
     	}
    		this.insertWasAllOrNoneList.add(isAllOrNone);
-   		return (F45_SaveResultListWrapper) this.getNextResultList();
+   		return (F45_DML_SaveResultListWrapper) this.getNextResultList();
     }
 
-    public override F45_SaveResultListWrapper doUpdate(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_DML_SaveResultListWrapper doUpdate(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.updatedSObjectListList.add(objectList);
     	}
    		this.updateWasAllOrNoneList.add(isAllOrNone);
-   		return (F45_SaveResultListWrapper) this.getNextResultList();
+   		return (F45_DML_SaveResultListWrapper) this.getNextResultList();
     }
     
-    public override F45_UpsertResultListWrapper doUpsert(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_DML_UpsertResultListWrapper doUpsert(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.upsertedSObjectListList.add(objectList);
     	}
    		this.upsertWasAllOrNoneList.add(isAllOrNone);
-   		return (F45_UpsertResultListWrapper) this.getNextResultList();
+   		return (F45_DML_UpsertResultListWrapper) this.getNextResultList();
     }
     
-    public override F45_DeleteResultListWrapper doDelete(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_DML_DeleteResultListWrapper doDelete(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.deletedSObjectListList.add(objectList);
     	}
    		this.deleteWasAllOrNoneList.add(isAllOrNone);
-   		return (F45_DeleteResultListWrapper) this.getNextResultList();
+   		return (F45_DML_DeleteResultListWrapper) this.getNextResultList();
     }
     
-    public override F45_UndeleteResultListWrapper doUndelete(List<SObject> objectList, Boolean isAllOrNone) {
+    public override F45_DML_UndeleteResultListWrapper doUndelete(List<SObject> objectList, Boolean isAllOrNone) {
     	if (objectList != null && !objectList.isEmpty()) {
     		this.undeletedSObjectListList.add(objectList);
     	}
    		this.undeleteWasAllOrNoneList.add(isAllOrNone);
-   		return (F45_UndeleteResultListWrapper) this.getNextResultList();
+   		return (F45_DML_UndeleteResultListWrapper) this.getNextResultList();
     }
     
-    private F45_DmlResultListWrapperInterface getNextResultList() {
+    private F45_DML_GenericResultListWrapperIntf getNextResultList() {
     	return (dmlResultListWrapperList != null)
     		? dmlResultListWrapperList[returnedResult++]
     		: null;
