--- a/samples/src/classes/F45_FTY_SObjectPrefixHelper.cls
+++ b/samples/src/classes/F45_FTY_SObjectPrefixHelper.cls
@@ -1,6 +1,6 @@
 @isTest 
-public class F45_SObjectPrefixHelper {
+public class F45_FTY_SObjectPrefixHelper {
 	public static String get(Schema.SObjectType sObjectType) {
 		return sObjectType.getDescribe().getKeyPrefix();
 	}
-} 
+}
