--- a/samples/src/classes/SF45_CaseFactory.cls
+++ b/samples/src/classes/SF45_CaseFactory.cls
@@ -1,22 +1,22 @@
 @isTest
-public class SF45_CaseFactory extends F45_SObjectFactory { 
+public class SF45_CaseFactory extends F45_FTY_SObjectFactory { 
 	private static Map<String, Object> defaultByKeyMap = new Map<String, Object>{
 			'type' => 'Mechanical',
 			'status' => 'New',
 			'origin' => 'Phone'	
 	}; 
 	
-	public static List<Case> createList(Case template, Integer quantity, F45_DummyInsertMode insertMode){
+	public static List<Case> createList(Case template, Integer quantity, F45_FTY_DummyInsertMode insertMode){
 		MockStrategyInterface strategy = new SessionInQuantityStrategy(template, quantity); 
-		return (List<Case>) F45_SObjectFactory.createList(strategy, insertMode); 
+		return (List<Case>) F45_FTY_SObjectFactory.createList(strategy, insertMode); 
 	}
 	
-	public static Case create(Case template, F45_DummyInsertMode insertMode){
+	public static Case create(Case template, F45_FTY_DummyInsertMode insertMode){
 		Integer quantity = 1;
 		return createList(template, quantity, insertMode)[0];
 	} 
 
-	public static Case create(F45_DummyInsertMode insertMode){
+	public static Case create(F45_FTY_DummyInsertMode insertMode){
 		Integer quantity = 1;
 		return createList(new Case(), quantity, insertMode)[0];
 	}
@@ -30,11 +30,11 @@ public class SF45_CaseFactory extends F45_SObjectFactory {
 	public static Case createRealClosingCase(String requestType) {
 		Case CaseTemplate = new Case(
 			status = 'Closed',   
-			vehicle__c = SF45_VehicleFactory.create(F45_DummyInsertMode.REAL).id, 
-			equipment__c = SF45_ProductFactory.create(F45_DummyInsertMode.REAL).id, 
+			vehicle__c = SF45_VehicleFactory.create(F45_FTY_DummyInsertMode.REAL).id, 
+			equipment__c = SF45_ProductFactory.create(F45_FTY_DummyInsertMode.REAL).id, 
 			type = requestType
 		); 
-		Case newCase = create(CaseTemplate, F45_DummyInsertMode.REAL);
+		Case newCase = create(CaseTemplate, F45_FTY_DummyInsertMode.REAL);
 		Case closedCase = [
 			SELECT id, isClosed, vehicle__c, equipment__c, type
 			FROM Case
